<resources>
    <string name="app_name">DocSolutions</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="ok">Ok</string>
    <string name="buscar">Buscar</string>
    <string name="nuevo">Nuevo Usuario</string>
    <string name="nombre">Nombre:</string>
    <string name="apellidop">Apellido P:</string>
    <string name="apellidom">Apellido M:</string>
    <string name="email">Email:</string>
    <string name="telefono">Telefono:</string>
    <string name="usuario">Usuario:</string>
    <string name="guardar">Guardar</string>
</resources>